finished control panel ui

--- a/src/App.less
+++ b/src/App.less
@@ -2,3 +2,13 @@
   width: 100%;
   height: 100%;
 }
+
+body {
+  color: rgba(0, 0, 0, 0.88);
+  font-family: Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
+}
+
+body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, textarea, p, blockquote, th, td, hr, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section{
+  margin: 0;
+  padding: 0;
+}
