--- a/src/components/style/graph-view.less
+++ b/src/components/style/graph-view.less
@@ -3,3 +3,18 @@
     right: 0;
     top: 0;
 }
+
+.graph-wrap{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+#graph-title {
+    position: absolute;
+    font-weight: 500;
+    font-size: 1rem;
+    left: 0.5vw;
+    top: 1vh;
+    color: #000;
+}
