--- a/src/components/style/graph-rank-view.less
+++ b/src/components/style/graph-rank-view.less
@@ -8,5 +8,11 @@
 .graph-rank-view-title {
     margin: 0 auto;
     width: 100%;
+    height: 10%;
     padding-left: 0.4vw;
+}
+
+.graph-rank-view-content {
+    width: 100%;
+    height: 90%;
 }
