--- a/src/components/style/subgraph.less
+++ b/src/components/style/subgraph.less
@@ -12,3 +12,12 @@
     text-align: center;
     font-weight: 400;
 }
+
+#button-group {
+    right: 1%;
+    height: 8%;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    position: absolute;
+}
