--- a/src/components/style/graph-view.less
+++ b/src/components/style/graph-view.less
@@ -19,3 +19,17 @@
     top: 1vh;
     color: #000;
 }
+
+#button-group {
+    right: 0%;
+    height: 8%;
+    width: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+}
+
+.label{
+    width: 5vw;
+}
